# pluto-legacy-web-prover

./: .env.example  .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: config.rs  lib.rs  main.rs  noir_proof.rs  origo.rs  origo_native.rs  proof.rs  tls.rs
client/src/contracts/: check_usdt_balance.rs  claim.rs  enroll.rs  mod.rs  transfer_usdt_to_vault.rs
demo/: Cargo.toml
demo/src/: lib.rs  main.rs
demo/src/contracts/: check_usdt_balance.rs  claim.rs  common.rs  has_valid_payment_history.rs  mod.rs
fixture/: client.origo_noir_tcp_local.json  client.origo_tcp_local_binance.json  client.origo_tcp_local_example.json
notary/: Cargo.toml
notary/src/: errors.rs  main.rs  origo.rs  origo_noir.rs  origo_verifier.rs
proofs/: Cargo.toml
proofs/src/: circuits.rs  errors.rs  lib.rs  setup.rs
proofs/src/program/: data.rs  manifest.rs  mod.rs  noir.rs
proofs/src/tests/: inputs.rs  mod.rs
rust_binance/: Cargo.toml
scripts/: parse-plaintext.ts  parse-plaintext1.ts
web-prover-core/src/: http.rs
