[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
client  =  { workspace = true }
proofs  = { workspace = true }
rustls      ={ version="0.23", default-features=false, features=["ring"] }
clap    = { workspace=true }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
dotenv = "0.15"
url = "2.3"
chrono = "0.4"

# Logging and errors
tracing           ={ workspace=true }
tracing-subscriber={ workspace=true }

# Blockchain
ethers = { version = "2.0", features = ["legacy"] }
eyre = "0.6"