[package]
name = "rust_binance"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
dotenv = "0.15"
url = "2.3"
chrono = "0.4"

[[bin]]
name = "generate-api-info"
path = "src/bin/generate-api-info.rs"

[[bin]]
name = "rust_binance"
path = "src/main.rs"
